--- a/src/ui-kit/toggle/toggle.scss
+++ b/src/ui-kit/toggle/toggle.scss
@@ -25,7 +25,7 @@
     height: 20px;
     border-radius: 50%;
     background-color: var(--white);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: var(--shadow-toggle);
     transition: transform 0.2s ease;
   }
 }
